--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   google_fonts: ^6.2.1
   google_nav_bar: ^5.0.6
   auto_size_text: ^3.0.0
+  firebase_core: ^2.24.2
 
 dev_dependencies:
   flutter_test:
