--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,8 @@ dependencies:
   firebase_core: ^2.24.2
   image_picker: ^1.0.7
   permission_handler: ^11.3.0
+  cloud_firestore: ^4.14.0
+  firebase_storage: ^11.6.0
 
 dev_dependencies:
   flutter_test:
@@ -85,9 +87,9 @@ flutter:
     - family: GeneralSans
       fonts:
         - asset: assets/fonts/GeneralSans-Bold.otf
-        - asset: assets/fonts/GeneralSans-Italic.otf
-          # weight: 700
-  #   - family: Trajan Pro
+  #       - asset: assets/fonts/GeneralSans-Italic.otf
+  #         weight: 700
+  # #   - family: Trajan Pro
   #     fonts:
   #       - asset: fonts/TrajanPro.ttf
   #       - asset: fonts/TrajanPro_Bold.ttf
